# SNUV_TOMO

./: CMakeLists.txt  README.md  mainASDPOCS.cpp  mainSNUV_IRCD.cpp  projection.cpp  settings.h  transformer.cpp
include/: MP.h  RW_ArrayXd.h  RW_SparseMat.h  SparseMatrix.h  convert_ArrayXd_CSV.h
objects/: ModifiedSheppLogan128  ModifiedSheppLogan256  ModifiedSheppLogan256_DiagGrad  ModifiedSheppLogan256_Grad  ModifiedSheppLogan256_HorGrad  ModifiedSheppLogan64  RanGradSqauresTer256  SheppLogan256_UltraGrad  SquaresTer256
